# dotfiles

./: .gitconfig  .gitconfig-lyskdev  .gitignore  .inputrc  .shell_paths  .stow-local-ignore  .tmux.conf  .zprofile  .zshenv  .zshrc  AGENTS.md  Makefile  README.md  deploy.sh  install.sh
.agents/skills-disabled/gitlab/: SKILL.md
.claude/: settings.json
.codex/skills/github/: SKILL.md
.config/fish/: config.fish
.config/ghostty/: config
.config/helix/: config.toml  languages.toml
.config/zed/: settings.json
.ssh/config.d/: git-maciejb-me.conf
.zsh/completions/: _mlx-subtitles  _msgvault
scripts/: install-obsidian-skills  test-install  test-install-ssh-config  zed-settings
src/dotfiles_install/: __init__.py  __main__.py  cli.py  config.py  core.py  downloads.py  errors.py  options.py  package_managers.py  shell_setup.py  state.py  terminfo.py  tools.py
terminfo/: ghostty.terminfo
tests/: conftest.py  helpers.py  test_apt.py  test_entrypoint.py  test_local_installers.py  test_makefile.py  test_options.py  test_shell_setup.py  test_ssh_config.py
toolbox/: pyproject.toml
toolbox/src/: system_dependencies.py  whisper_memory.py  whisper_mlx.py
toolbox/src/mapskit/: __init__.py
toolbox/src/mlx_subtitles/: __init__.py  __main__.py
toolbox/src/mlx_whisper_cli/: __init__.py  __main__.py
toolbox/src/yt_summarize/: __init__.py
toolbox/tests/: test_system_dependencies.py  test_whisper_memory.py  test_whisper_mlx.py
toolbox/tests/mapskit/: test_mapskit.py
toolbox/tests/mlx_subtitles/: test_helpers.py
toolbox/tests/yt_summarize/: test_metadata.py
(+51 files in other folders)
